crates/glyph-cli/tests/corpus/invalid/imports/lib_with_skill.glyph
skill some_skill()
    description: "A skill."
    flow:
        "Do something."
